Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Jamiesinn.me by JamieSinn</title>
+    <title>JamieSinn.me by JamieSinn</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>Jamiesinn.me</h1>
-        <h2>My resume site.</h2>
+        <h1>JamieSinn.me</h1>
+        <h2>My resume</h2>
 
         <section id="downloads">
           <a href="https://github.com/JamieSinn/jamiesinn.me/zipball/master" class="btn">Download as .zip</a>
