--- a/index.html
+++ b/index.html
@@ -29,29 +29,120 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span class="octicon octicon-link"></span></a>Summary</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>A friendly and dedicated programmer with a passion for technology and hardware. Experienced product creation, management, development. A creative problem solver eager to assist others in any matter.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="education-and-training" class="anchor" href="#education-and-training" aria-hidden="true"><span class="octicon octicon-link"></span></a>Education and Training</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<ul>
+<li>Ontario Secondary School Diploma
+
+<ul>
+<li>Completion in June 2016 - Currently Grade 12</li>
+</ul>
+</li>
+<li>CCNA Certification
+
+<ul>
+<li>Anticipated completion in 2016</li>
+</ul>
+</li>
+<li>RP4K Programming Courses
+
+<ul>
+<li>2010-2014</li>
+<li>All levels completed.</li>
+<li>Assisted in creation of several courses.</li>
+</ul>
+</li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="experience" class="anchor" href="#experience" aria-hidden="true"><span class="octicon octicon-link"></span></a>Experience</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<ul>
+<li>Lead Developer, <em><a href="http://ecocitycraft.com">EcoCityCraft</a></em>
+
+<ul>
+<li>Manages and develops all development aspects of the EcoCityCraft Network.</li>
+<li>Created and overhauled several major features on the network.</li>
+</ul>
+</li>
+<li>CEO and Founder, <em><a href="http://sinndev.com">Sinn Development</a></em>
+
+<ul>
+<li>Licensed developer for Wii U, Playstation 3, 4, Vita as well as the Xbox One.</li>
+<li>Games expecting to be published in late 2016 - early 2017</li>
+</ul>
+</li>
+</ul>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="interests-and-activities" class="anchor" href="#interests-and-activities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Interests and Activities</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<ul>
+<li>Member and Programmer on <a href="http://oakvillefirstrobotics.org/">FRC Team 1360</a>
+</li>
+<li>Game Development</li>
+<li>Downhill Mountain Biking and Skiing</li>
+<li>Refurbishing an antique Steam Traction Engine</li>
+<li>Server Administration</li>
+</ul>
+
+<h3>
+<a id="skills" class="anchor" href="#skills" aria-hidden="true"><span class="octicon octicon-link"></span></a>Skills</h3>
+
+<ul>
+<li>Professional level
+
+<ul>
+<li>Programming
+
+<ul>
+<li>Java (2004-present)</li>
+<li>C# (2004-present)</li>
+</ul>
+</li>
+<li>Microsoft Office Suite</li>
+<li>Windows 7</li>
+</ul>
+</li>
+<li>Experienced
+
+<ul>
+<li>Linux Systems Administration</li>
+<li>Programming in several languages
+
+<ul>
+<li>C++ (2005-present)</li>
+<li>SQL (2009-present)</li>
+<li>Python (2006-present)</li>
+<li>PHP/HTML/CSS (2006-present)</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Learning
+
+<ul>
+<li>Network Administration</li>
+<li>Many more new skills!</li>
+</ul>
+</li>
+</ul>
+
+<h3>
+<a id="contactme-around-the-web" class="anchor" href="#contactme-around-the-web" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact/Me around the web</h3>
+
+<ul>
+<li>Twitter: <a href="https://twitter.com/SinnJames">@SinnJames</a>
+</li>
+<li><a href="https://ca.linkedin.com/in/jamiesinn">LinkedIn</a></li>
+<li>Blog - <a href="http://jamiesinn.ca">jamiesinn.ca</a>
+</li>
+</ul>
       </section>
     </div>
 
