--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>JamieSinn.me by JamieSinn</title>
+    <title>JamieSinn.me</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>JamieSinn.me</h1>
+        <h1>jamiesinn.me</h1>
         <h2>My resume</h2>
 
         <section id="downloads">
-          <a href="https://github.com/JamieSinn/jamiesinn.me/zipball/master" class="btn">Download as .zip</a>
+          <a href="http://jamiesinn.ca" class="btn">jamiesinn.ca</a>
           <a href="https://github.com/JamieSinn/jamiesinn.me/tarball/master" class="btn">Download as .tar.gz</a>
           <a href="https://github.com/JamieSinn/jamiesinn.me" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
