--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 <li>Created and overhauled several major features on the network.</li>
 </ul>
 </li>
+<li>Camp Councillor, <em>Town of Oakville</em>
+
+<ul>
+<li>Managed and developed intruiging and educational camps for children aged 5-13 relating to robotics.</li>
+<li>Collaborated with other coucillors in stimulating STEM learning in the camps.</li>
+</ul>
+</li>
 <li>CEO and Founder, <em><a href="http://sinndev.com">Sinn Development</a></em>
 
 <ul>
@@ -83,7 +90,9 @@
 <a id="interests-and-activities" class="anchor" href="#interests-and-activities" aria-hidden="true"><span class="octicon octicon-link"></span></a>Interests and Activities</h3>
 
 <ul>
-<li>Member and Programmer on <a href="http://oakvillefirstrobotics.org/">FRC Team 1360</a>
+<li>Member and Programmer on <a href="http://oakvillefirstrobotics.org/">FRC Team 1360</a> and <a href="http://1334.ca">FRC Team 1334</a> from 2013 to 2016
+</li>
+<li>Mentor on <a href="http://1334.ca/">FRC Team 1334</a>
 </li>
 <li>Game Development</li>
 <li>Downhill Mountain Biking and Skiing</li>
@@ -102,7 +111,7 @@
 
 <ul>
 <li>Java (2004-present)</li>
-<li>C# (2004-present)</li>
+
 </ul>
 </li>
 <li>Microsoft Office Suite</li>
@@ -118,6 +127,7 @@
 <ul>
 <li>C++ (2005-present)</li>
 <li>SQL (2009-present)</li>
+<li>C# (2004-present)</li>
 <li>Python (2006-present)</li>
 <li>PHP/HTML/CSS (2006-present)</li>
 </ul>
