--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <li>Created and overhauled several major features on the network.</li>
 </ul>
 </li>
-<li>Camp Councillor, <em>Town of Oakville</em>
+<li>Camp Councillor, <em><a href="http://oakville.ca/">Town of Oakville</a></em>
 
 <ul>
 <li>Managed and developed intruiging and educational camps for children aged 5-13 relating to robotics.</li>
@@ -81,7 +81,8 @@
 
 <ul>
 <li>Licensed developer for Wii U, Playstation 3, 4, Vita as well as the Xbox One.</li>
-<li>Games expecting to be published in late 2016 - early 2017</li>
+<li>Games expecting to be published in late 2017 - early 2018</li>
+<li>Developed software to cater to automation of tasks.</li>
 </ul>
 </li>
 </ul>
@@ -144,13 +145,14 @@
 </ul>
 
 <h3>
-<a id="contactme-around-the-web" class="anchor" href="#contactme-around-the-web" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact/Me around the web</h3>
+<a id="contactme-around-the-web" class="anchor" href="#contactme-around-the-web" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact/Me Around the Web</h3>
 
 <ul>
 <li>Twitter: <a href="https://twitter.com/SinnJames">@SinnJames</a>
 </li>
 <li><a href="https://ca.linkedin.com/in/jamiesinn">LinkedIn</a></li>
 <li>Blog - <a href="http://jamiesinn.ca">jamiesinn.ca</a>
+<li><a href="https://github.com/JamieSinn/">GitHub</a></li>
 </li>
 </ul>
       </section>
