--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <li>Ontario Secondary School Diploma
 
 <ul>
-<li>Completion in June 2016 - Currently Grade 12</li>
+<li>Class of 2016 - Blyth Academy Burlington</li>
 </ul>
 </li>
 <li>CCNA Certification
@@ -47,6 +47,13 @@
 <li>Anticipated completion in 2016</li>
 </ul>
 </li>
+<li>University of Waterloo
+
+<ul>
+<li>Bachelor of Environmental Science - Geomatics - Class of 2020</li>
+</ul>
+</li>
+
 <li>RP4K Programming Courses
 
 <ul>
